# kestrelcp

./: .gitignore  .vscodeignore  ARCHITECTURE.md  CMakeLists.txt  DEVELOPMENT.md  README.md  commit.py  new.py  notes.md  package-lock.json  package.json  test.py  tsconfig.json
.github/scripts/: release_notes.py
.github/workflows/: bump-version.yml  release-extension.yml  scraper-canary.yml  tests.yml
kattis/bijele/: 1.in  1.out  2.out  notes.md  solution.cpp
kattis/digitswap/: notes.md  solution.cpp
kattis/nsum/: notes.md  solution.cpp
kattis/oddecho/: 1.in  1.out  notes.md  solution.cpp
kattis/pyramids/: notes.md  solution.cpp
kattis/r2/: 1.in  2.in  notes.md  solution.cpp
kattis/sorttwonumbers/: notes.md  solution.cpp
kattis/triarea/: notes.md  solution.cpp
kattis/twosum/: notes.md
playground/: CMakeLists.txt  main.cpp  run
scripts/: commit.py  leetcode_auth.py  new.py  submit_leetcode.py  test.py  test_leetcode.py
src/: daily.ts  extension.ts  runner.ts  tree.ts
tests/: canary.py  test_grading.py
